--- a/catlogging-web/src/main/webapp/static/catlogging.css
+++ b/catlogging-web/src/main/webapp/static/catlogging.css
@@ -106,7 +106,7 @@ footer, .push {
 }
 
 .navbar .navbar-brand {
-	background: url(images/logo25x34.png) no-repeat left center;
+	background: url(/static/images/logo25x34.png) no-repeat left center;
 	margin-left: 15px !important;
 	padding-left: 35px;
 }
