--- a/catlogging-web/src/main/webapp/static/slider/css/slider.css
+++ b/catlogging-web/src/main/webapp/static/slider/css/slider.css
@@ -76,13 +76,13 @@
   position: absolute;
   cursor: pointer;
   background-color: #f7f7f7;
-  background-image: -moz-linear-gradient(top, #f5f5f5, #f9f9f9);
-  background-image: -webkit-gradient(linear, 0 0, 0 100%, from(#f5f5f5), to(#f9f9f9));
-  background-image: -webkit-linear-gradient(top, #f5f5f5, #f9f9f9);
-  background-image: -o-linear-gradient(top, #f5f5f5, #f9f9f9);
-  background-image: linear-gradient(to bottom, #f5f5f5, #f9f9f9);
+  background-image: -moz-linear-gradient(top, #292929, #3e3e3e);
+  background-image: -webkit-gradient(linear, 0 0, 0 100%, from(#292929), to(#3e3e3e));
+  background-image: -webkit-linear-gradient(top, #292929, #3e3e3e);
+  background-image: -o-linear-gradient(top, #292929, #3e3e3e);
+  background-image: linear-gradient(to bottom, #292929, #3e3e3e);
   background-repeat: repeat-x;
-  filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#fff5f5f5', endColorstr='#fff9f9f9', GradientType=0);
+  filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#ff292929', endColorstr='#ff3e3e3e', GradientType=0);
   -webkit-box-shadow: inset 0 1px 2px rgba(0, 0, 0, 0.1);
   -moz-box-shadow: inset 0 1px 2px rgba(0, 0, 0, 0.1);
   box-shadow: inset 0 1px 2px rgba(0, 0, 0, 0.1);
@@ -93,13 +93,13 @@
 .slider-selection {
   position: absolute;
   background-color: #f7f7f7;
-  background-image: -moz-linear-gradient(top, #f9f9f9, #f5f5f5);
-  background-image: -webkit-gradient(linear, 0 0, 0 100%, from(#f9f9f9), to(#f5f5f5));
-  background-image: -webkit-linear-gradient(top, #f9f9f9, #f5f5f5);
-  background-image: -o-linear-gradient(top, #f9f9f9, #f5f5f5);
-  background-image: linear-gradient(to bottom, #f9f9f9, #f5f5f5);
+  background-image: -moz-linear-gradient(top, #3e3e3e, #292929);
+  background-image: -webkit-gradient(linear, 0 0, 0 100%, from(#3e3e3e), to(#292929));
+  background-image: -webkit-linear-gradient(top, #3e3e3e, #292929);
+  background-image: -o-linear-gradient(top, #3e3e3e, #292929);
+  background-image: linear-gradient(to bottom, #3e3e3e, #292929);
   background-repeat: repeat-x;
-  filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#fff9f9f9', endColorstr='#fff5f5f5', GradientType=0);
+  filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#ff3e3e3e', endColorstr='#ff292929', GradientType=0);
   -webkit-box-shadow: inset 0 -1px 0 rgba(0, 0, 0, 0.15);
   -moz-box-shadow: inset 0 -1px 0 rgba(0, 0, 0, 0.15);
   box-shadow: inset 0 -1px 0 rgba(0, 0, 0, 0.15);
