--- a/catlogging-web/src/main/webapp/static/bootstrap/3.3.6/css/bootstrap.css
+++ b/catlogging-web/src/main/webapp/static/bootstrap/3.3.6/css/bootstrap.css
@@ -5058,7 +5058,7 @@ a.thumbnail.active {
   height: 21px;
   margin-bottom: 21px;
   overflow: hidden;
-  background-color: #ebebeb;
+  background-color: #2b2b2b;
   border-radius: 4px;
   box-shadow: inset 0 1px 2px rgba(0, 0, 0, 0.1);
 }
