--- a/src/main/resources/static/templates/layouts/ngFormFieldWrapper.html
+++ b/src/main/resources/static/templates/layouts/ngFormFieldWrapper.html
@@ -17,20 +17,33 @@
 <!--*******************************************************************************/-->
 
 <!DOCTYPE html>
-<html lang="ko" xmlns:th="http://www.thymeleaf.org" >
-<th:block th:fragment="sidebar">
-	<ul class="nav nav-sidebar">
-		<th:block th:each="source: ${logSources}" th:with="url=@{/c/sources} ">
-			<li th:class="${source.id==activeSource?.id ? 'active' : ''}"><a th:href="|${url}/${source.id}/logs|">[[${source.name}]]</a>
-				<ul>
-					<th:block th:each="log : ${source.logs}" th:with="logpath=${log.path},logLink=@{${url}+'/'+${source.id} +'/show'(log=${log.path})}">
-						<li th:class="${log eq activeLog ? 'active' : ''}"><a th:href="${logLink}" th:title="${log.path}">
-							[[${T(org.apache.commons.io.FilenameUtils).getName(logpath)}]]</a>
-						</li>
-					</th:block>
-				</ul>
-			</li>
-		</th:block>
-	</ul>
+<html lagn="ko"
+	  xmlns:th="http://www.thymeleaf.org"
+>
+<th:block th:fragment="wrapper(content,cssClass,fieldName)"
+		  th:with="bindErrorsPath=(${bindErrorsPath} ?: ${fieldName}),
+					isValidationPath=(${isValidationPath} ?: false)"
+>
+<div th:class="${cssClass}" th:attr="ng-class=|{
+	'has-error':
+	form.${fieldName}.$invalid
+	&& !form.${fieldName}.$pristine
+	|+'||'+| form.${fieldName}.$error.pattern
+	|+'||'+| bindErrors['${bindErrorsPath}']
+	&& form.${fieldName}.$pristine
+}|">
+
+	<p class="help-block" th:attr="ng-show=|
+								form.${fieldName}.$invalid
+							&& !form.${fieldName}.$pristine
+							&& form.${isValidationPath}
+							|+'||'+| form.${fieldName}.$error.pattern|"
+	>[(#{catlogging.common.absolutePath(${@catloggingProps['catlogging.validationPath']})})]</p>
+
+	<th:block th:replace="${content}"></th:block>
+	<div class="help-block" th:attr="ng-if=|bindErrors['${bindErrorsPath}']
+						&& form.${fieldName}.$pristine
+	|"> {{bindErrors['[(${bindErrorsPath})]']}}</div>
+</div>
 </th:block>
 </html>
