--- a/src/main/resources/static/templates/sniffers/new.html
+++ b/src/main/resources/static/templates/sniffers/new.html
@@ -16,19 +16,19 @@
 <!--* along with this program.  If not, see <http://www.gnu.org/licenses/>.-->
 <!--*******************************************************************************/-->
 
+<!--로그 출력 페이지에서 정보페이지-->
 <!DOCTYPE html>
 <html xmlns:th="http://www.thymeleaf.org"
 	  xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout"
 	  layout:decorate="templates/layouts/layout"
-	  th:with="title=#{catlogging.common.new} + ' ' + #{catlogging.type.com.catlogging.model.LogSource},
-      activeNavbar='sources',
-      ngModules='SourceEditorModule',
-      submitLabel=#{catlogging.common.form.create},
+	  th:with="title=#{catlogging.common.new} + ' - ' + #{catlogging.common.sniffer},
+      activeNavbar='sniffers',
+      ngModules='SnifferEditorModule',
       isAuth=${catloggingProps['catlogging.enable.auth'] == 'true' ? true : false}"
 >
 
 <!-- 해당 기능에서 head에 추가적인 스크립트가 필요할 시 커스텀 insert. -->
-<head th:insert="templates/sources/custumNewHeadHtml::htmlHead"></head>
+<head th:insert="templates/sniffers/custumNewHeadHtml::htmlHead"></head>
 
 <!-- 삽입될 각 개별적인 영역을 작성 -->
 <th:block layout:fragment="content" >
@@ -36,20 +36,24 @@
 		<div class="main">
 
 			<!-- 해당 기능에서 head에 추가적인 스크립트가 필요할 시 커스텀 insert. -->
-			<th:block th:replace="templates/sources/customNewBreadcrumb::breadcrumb"></th:block>
+			<th:block th:replace="templates/sniffers/customNewBreadcrumb::breadcrumb"></th:block>
 
-			<!-- 해당 기능에서 커스텀 insert. -->
 			<form id="refresh" method="post"></form>
-			<form ng-controller="SourceEditController" name="form" method="post" action="/c/sources/new" th:field="*{errorForm.value}" id="sourceForm"
+			<form ng-controller="SnifferEditController" name="form" method="post" action="/c/sniffers/new" th:field="*{errorForm.value}" id="snifferForm"
 				  role="form" novalidate="novalidate">
 
 				<!-- 해당 기능에서 공통 커스텀 body insert. -->
-				<th:block th:replace="templates/sources/customEditNewFormBody::formbody"></th:block>
+				<th:block th:replace="templates/sniffers/customEditNewFormBody::formbody"></th:block>
+
+				<hr>
+				<div class="row">
+					<div class="col-md-12" us-spinner spinner-key="update">
+						<button type="button" class="btn btn-primary btn-sm" ng-disabled="form.$invalid" ng-click="submit(form)">[[#{catlogging.common.form.create}]]</button>
+					</div>
+				</div>
 			</form>
 
 		</div>
 	</div>
 </th:block>
-
-
 </html>
