--- a/src/main/resources/static/templates/sources/edit.html
+++ b/src/main/resources/static/templates/sources/edit.html
@@ -50,6 +50,8 @@
             <div class="tab-pane active">
                 <form id="refresh" method="post"></form>
                 <form ng-controller="SourceEditController" name="form" method="post" th:action="|/c/sources/${activeSource.id}|" th:field="*{errorForm.value}" id="sourceForm" role="form" novalidate="novalidate">
+
+                    <!-- 해당 기능에서 커스텀 body insert. -->
                     <th:block th:replace="templates/sources/customEditNewFormBody::formbody"></th:block>
                 </form>
             </div>
